# the-embedded-os

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
kernel/: Cargo.toml  memory.x
kernel/src/: common.rs  display.rs  drivers.rs  lib.rs  main.rs  memory.rs
kernel/src/drivers/: display.rs  keyboard.rs
kernel/src/drivers/keyboard/: core.rs  layout.rs
kernel/src/memory/: linker.rs
kernel_abi/: Cargo.toml  README.md  build.rs
kernel_abi/src/: display.rs  lib.rs
libsys/: Cargo.toml  README.md  build.rs
libsys/src/: alloc.rs  core.rs  display.rs  fd.rs  lib.rs  process.rs
loader/: Cargo.toml  memory.x
loader/src/: main.rs
shell/: build.rs  linker.ld
shell/src/: main.rs
st7920/: Cargo.toml
st7920/src/: lib.rs
