[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel_abi = { path = "../kernel_abi" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "rp2040", "critical-section-impl", "time-driver"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-embedded-hal = "0.6"
embedded-hal-async = "1.0"
embedded-hal = "1.0"
assign-resources = "0.5.0"
static_cell = "2.1.1"
portable-atomic = { version = "1.13", features = [ "critical-section" ] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
embedded-graphics = { version = "0.8", features = [ "defmt" ] }
