[package]
name = "st7920"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1"
num-traits = { version = "0.2.12", default-features = false }
num-derive = { version = "0.4.1", default-features = false }
embedded-graphics = { optional = true, version = "0.8" }

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
graphics-unchecked = ["graphics"]
